# ignyx

./: .coverage  .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_bugs.py  test_p3.py  test_ws_client.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  docs.yml  release.yml  test.yml
benchmarks/: async_bench.py  bench.py  fastapi_bench.py  fastapi_honest.py  flask_bench.py  honest_bench.py  minimal_arm.py  minimal_sync.py  native_fastapi_app.py  native_ignyx_app.py  post.lua  priority1_test.py  run_arm.sh  run_async_bench.sh  run_benchmark.py  run_benchmarks.sh  starlette_bench.py  test_loop.py  test_thread_local.py  test_threadsafe.py
benchmarks/results/: README.md
docs/: benchmarks.md  dependency_injection.md  deployment.md  error_handling.md  index.md  lifespan.md  middleware.md  quickstart.md  request.md  response.md  routing.md  security.md  static_files.md  testing.md  validation.md  websockets.md
examples/: demo.py  dependency_example.py  file_upload_example.py  hello.py  middleware_example.py  pydantic_example.py  router_example.py  websocket_example.py
middleware/: index.html
python/ignyx/: __init__.py  app.py  depends.py  exceptions.py  middleware.py  openapi.py  reload.py  request.py  responses.py  router.py  security.py  staticfiles.py  testclient.py  uploads.py  websocket.py
routing/: index.html
search/: search_index.json
security/: index.html
site/: 404.html
site/benchmarks/: index.html
site/dependency_injection/: index.html
site/deployment/: index.html
site/error_handling/: index.html
site/lifespan/: index.html
site/quickstart/: index.html
site/request/: index.html
site/response/: index.html
site/search/: search_index.json
site/security/: index.html
site/testing/: index.html
site/validation/: index.html
site/websockets/: index.html
src/: handler.rs  lib.rs  middleware.rs  multipart.rs  pyref.rs  request.rs  response.rs  router.rs  server.rs  websocket.rs
static/: swagger-ui.html
static_files/: index.html
tests/: conftest.py  test_dependencies.py  test_exceptions.py  test_lifespan.py  test_middleware.py  test_openapi.py  test_responses.py  test_routing.py  test_security.py  test_static.py  test_uploads.py  test_validation.py
