[package]
name = "ignyx"
version = "2.1.4"
edition = "2021"

[lib]
name = "ignyx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
http = "1"
form_urlencoded = "1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
sha1_smol = "1"
base64 = "0.22"
multer = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
