[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ignyx"
version = "0.2.0"
description = "Rust-powered Python web framework — 10x faster than FastAPI"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Saketh Jangala" }
]
requires-python = ">=3.12"
keywords = ["web", "framework", "rust", "api", "http", "fast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/sakethdevx/ignyx"
Repository = "https://github.com/sakethdevx/ignyx"
"Bug Tracker" = "https://github.com/sakethdevx/ignyx/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ignyx._core"
